[package]
name = "daylight_extender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "shelly"
]

[dependencies]
shelly = { path = "shelly" }
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"
log = "0.4.20"
serde_json = "1.0.108"
simple_logger = "4.3.0"
sunrise = "1.0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
clap-num = "1.0.2"

[dev-dependencies]
mockito = "1.2.0"
rstest = "0.18.2"
